# sintra

./: .env.example  .gitignore  PROJECT_REPORT.md  README.md  RECOMMENDATIONS.md  REPORTs.md  optimized_recipe.json  pyproject.toml
.github/workflows/: ci.yml
demo/: demo_script.sh  sintra_demo.cast
profiles/: jetson_nano.yaml  rasberry_pi5.yaml  raspberry_pi_5.yaml
samples/: example_output.json
src/sintra/: __init__.py  checkpoint.py  cli.py  main.py
src/sintra/agents/: __init__.py  adaptive.py  experts.py  factory.py  leaderboard.py  nodes.py  planner.py  react_architect.py  reflector.py  runner.py  state.py  tools.py  utils.py
src/sintra/benchmarks/: __init__.py  executor.py
src/sintra/benchmarks/worker/: __init__.py  runner.py
src/sintra/compression/: __init__.py  bnb_quantizer.py  downloader.py  evaluator.py  ollama_exporter.py  onnx_optimizer.py  pruner.py  quantizer.py
src/sintra/persistence/: __init__.py
src/sintra/profiles/: __init__.py  hardware.py  models.py  parser.py
src/sintra/ui/: __init__.py  console.py  dashboard.py  progress.py
tests/: __init__.py  conftest.py  test_adaptive.py  test_backends.py  test_checkpoint.py  test_cli.py  test_compression.py  test_dashboard.py  test_executor.py  test_experts.py  test_hardware.py  test_integration.py  test_leaderboard.py  test_models.py  test_nodes.py  test_ollama_exporter.py  test_parser.py  test_persistence.py  test_planner.py  test_progress.py  test_pruner.py  test_reflector.py  test_state.py  test_tools.py  test_utils.py
