[project]
name = "sintra"
version = "0.1.0"
description = "Auto Distiller for Edge Devices (Edge AI Architect)"
readme = "README.md"
authors = [
    { name = "kalyan", email = "kalyan.katla@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "langchain-anthropic>=1.3.1",
    "langchain-google-genai>=4.1.3",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "optuna>=4.6.0",
    "psutil>=7.2.1",
    "rich>=14.2.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[project.scripts]
sintra = "sintra:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[tool.ruff.lint]
extend-select = ["I"]

[project.optional-dependencies]
anthropic = ["langchain-anthropic"]
google = ["langchain-google-genai"]
all = ["langchain-anthropic", "langchain-google-genai", "langchain-openai"]
