[project]
name = "sintra"
version = "0.2.0"
description = "Auto Distiller for Edge Devices (Edge AI Architect)"
readme = "README.md"
authors = [
    { name = "kalyan", email = "kalyan.katla@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.20.0",
    "langchain-anthropic>=1.3.1",
    "langchain-google-genai>=4.1.3",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "llama-cpp-python>=0.3.16",
    "psutil>=7.2.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "rich>=14.2.0",
    "safetensors>=0.4.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[project.optional-dependencies]
# Advanced quantization backends
bnb = [
    "bitsandbytes>=0.45.0",
    "accelerate>=1.0.0",
]
onnx = [
    "optimum[onnxruntime]>=1.24.0",
    "onnx>=1.17.0",
]
# LLM providers
anthropic = ["langchain-anthropic"]
google = ["langchain-google-genai"]
# All extras
all = [
    "bitsandbytes>=0.45.0",
    "accelerate>=1.0.0",
    "optimum[onnxruntime]>=1.24.0",
    "onnx>=1.17.0",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-openai",
]

[project.scripts]
sintra = "sintra:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.36.0",
    "mypy>=1.10.0",
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.11",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (>10 seconds)",
    "requires_model: marks tests that require model download",
    "requires_llama_cpp: marks tests that require llama.cpp",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "accelerate",
    "bitsandbytes",
    "langchain_anthropic",
    "langchain_google_genai",
    "langchain_openai",
    "langchain_ollama",
    "langgraph.*",
    "llama_cpp",
    "onnx",
    "optimum.*",
    "psutil",
    "rich.*",
    "torch",
    "torch.*",
    "transformers",
    "transformers.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "E", "W", "F", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/sintra"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
